api-pytorch/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codification-ape-model-deployment-pytorch
  namespace: user-meilametayebjee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codification-ape-model-deployment-pytorch
  template:
    metadata:
      labels:
        app: codification-ape-model-deployment-pytorch
    spec:
      containers:
        - name: codif-ape-app-pytorch
          image: thomasfaria/codification-ape-api:fasttext-pytorch
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 30000m
              memory: 50Gi
            requests:
              cpu: 100m
              memory: 2Gi
