api-pytorch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codification-ape-model-service-pytorch2008
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: codification-ape-model-deployment-pytorch2008

---

apiVersion: v1
kind: Service
metadata:
  name: codification-ape-model-service-pytorch2025
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: codification-ape-model-deployment-pytorch2025
