api-pytorch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codification-ape-model-ingress-pytorch2008
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  tls:
    - hosts:
        - codification-ape2008-pytorch.lab.sspcloud.fr
  rules:
    - host: codification-ape2008-pytorch.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codification-ape-model-service-pytorch2008
                port:
                  number: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codification-ape-model-ingress-pytorch2025
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  tls:
    - hosts:
        - codification-ape2025-pytorch.lab.sspcloud.fr
  rules:
    - host: codification-ape2025-pytorch.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codification-ape-model-service-pytorch2025
                port:
                  number: 5000
